# PipelineAssignment

./: README.md  pyproject.toml
input/: events.jsonl
output/bronze/: raw_events.csv
output/silver/: aggregated_metrics.csv  cleaned_events.csv  error_cases.csv
src/app/: main.py
src/pipeline/: main.py  run_pipeline.py  spark_transform.py
src/tests/: test_api.py
