[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "futurae-assignment"
version = "1.0.0"
description = "Technical assignment"
requires-python = ">=3.13"
packages = [{include = "app", from = "src"}, {include = "pipeline", from = "src"}, {include = "tests", from = "src"}]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "python-dateutil>=2.8",
  "pyspark>=3.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "httpx>=0.24",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
